<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CylinderAreaCalc</string>
    <string name="help_button_title">Hilfe</string>
    <string name="button_impressum">Impressum</string>
    <string name="zylinderdefinition_text">Ein Zylinder ist ein Körper, der von 2 kongruenten, parallelen, krummlinig begrenzten (Grund-)Flächen und der sie verbindenden Mantelfläche begrenzt wird. Sonderfälle sind der gerade und der schiefe Kreiszylinder</string>
    <string name="bedienungshilfe_text">In die vorhergesehenen Felder Radius und Höhe, die entsprechenden Angaben des Zylinders eintragen. Die Eingabe ist auf 4 Zeichen begrenzt. Zum Berechnen der Größen Volumen, Oberfläche, Mantelfläche, Grundfläche und Umfang den Berechnen-Button betätigen. Nach der Anzeige der Ergebnisse kann zwischen einer komplett neuen Berechnung (Neue Berechnung-Button) oder einer Korrektur der Daten (Zurück-Button) gewählt werden. Im zweiten Fall können die Werte mit Hilfe des Felder-Zurücksetzen-Buttons gelöscht werden. Die angezeigten Ergebisse sind logisch entsprechend den Eingaben zu interpretieren! Sind die Eingaben beispielsweise in Meter gemacht worden, so ist das Ergebnis für Umfang in Meter, die Ergebnisse für Grund-, Mantel- und Oberfläche in m^2 sowie Volumen in m^3.</string>
	<string name="mainact_ueberschrift">Zylindermaße eingeben</string>
	<string name="mainact_radius">Radius:</string>
	<string name="mainact_hoehe">Höhe:</string>
	<string name="mainact_berechnenKnopf">Berechnen</string>
	<string name="mainact_felderZuruecksetzenKnopf">Felder zurücksetzten</string>
	<string name="mainact_hintText1">Bitte Radius eingeben</string>
	<string name="mainact_hintText2">Bitte Höhe eingeben</string>
</resources>